@@ -1,8 +1,7 @@
 package com.adoph.framework.util;
 
-import com.adoph.framework.exception.UtilException;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.util.Base64Utils;
 
 import javax.crypto.Cipher;
 import java.security.*;
@@ -11,6 +10,7 @@ import java.security.spec.X509EncodedKeySpec;
 
 /**
  * RSA加密工具类
+ * 备注：加密的长度限制是53个字节
  *
  * @author Adoph
  * @version v1.0
@@ -21,12 +21,27 @@ public class RSAEncryptUtils {
     /**
      * 指定加密算法为RSA
      */
-    private static final String ALGORITHM = "RSA";
+    private static final String ALGORITHM_RSA = "RSA";
 
     /**
      * 密钥长度，用来初始化
      */
     private static final int KEY_SIZE = 1024;
+
+    /**
+     * 固定公钥
+     */
+    private static final String permPublicKey = "MFwwDQYJKoZIhvcNAQEBBQADSwAwSAJBAMKgQ3DtWh9Ah9V2I8qaar333NDclZmkB" +
+            "Jls+pSlR3YpmzFur3Tbv86AGVqtb3xqlmW8r/ot3vAz42gxdt59eFMCAwEAAQ==";
+
+    /**
+     * 固定私钥
+     */
+    private static final String permPrivateKey = "MIIBUwIBADANBgkqhkiG9w0BAQEFAASCAT0wggE5AgEAAkEAwqBDcO1aH0CH1XYj" +
+            "yppqvffc0NyVmaQEmWz6lKVHdimbMW6vdNu/zoAZWq1vfGqWZbyv+i3e8DPjaDF23n14UwIDAQABAkBYAGEeMaQ7V1FT+qwqUvIK3" +
+            "YUxx1u5cclGmlkfVzBdw53AaVFiwxQBTyEQv6Ol9B5zlBku6iBl53XTTSJM2GSRAiEA8rkDyY3k7XtVMU8jO6IJiTTj/+iilzRnCl" +
+            "dvkzKM+VsCIQDNRbkktQkGqB0olGA0carnKhpuyIqsOyP5iG8dHNY2aQIgUW1kKd/iZxEzGWG1LjJEBLWrr5R5x0QbNUrz8WvKA3U" +
+            "CIBg0kJBziIzwZf/S/0Uv4idAH73QiAmnL6bNH80fCWOBAiBNhp50JiEiFmiZ48YnZ60fm1Ezw4Uodj2SaM1oP4PWEA==";
 
     /**
      * 生成密钥对
@@ -39,13 +54,15 @@ public class RSAEncryptUtils {
             // RSA算法要求有一个可信任的随机数源
             SecureRandom secureRandom = new SecureRandom();
             // 为RSA算法创建一个KeyPairGenerator对象
-            keyPairGenerator = KeyPairGenerator.getInstance(ALGORITHM);
+            keyPairGenerator = KeyPairGenerator.getInstance(ALGORITHM_RSA);
             // 利用上面的随机数据源初始化这个KeyPairGenerator对象
             keyPairGenerator.initialize(KEY_SIZE, secureRandom);
         } catch (Exception e) {
             e.printStackTrace();
         }
-        assert keyPairGenerator != null;
+        if (keyPairGenerator == null) {
+            throw new RuntimeException("生成密钥对异常！");
+        }
         return keyPairGenerator.generateKeyPair();
     }
 
@@ -58,23 +75,39 @@ public class RSAEncryptUtils {
      */
     public static String encrypt(Key publicKey, String source) {
         if (StringUtils.isEmpty(source)) {
-            throw new UtilException("加密源不能为空或空字符串！");
+            throw new RuntimeException("加密内容不能为空！");
+        }
+        byte[] src = source.getBytes();
+        if (src.length > 53) {
+            throw new RuntimeException("加密内容超长！最多53个字节。加密内容：【" + source + "】");
         }
         String r = null;
         try {
             // 得到Cipher对象来实现对源数据的RSA加密
-            Cipher cipher = Cipher.getInstance(ALGORITHM);
+            Cipher cipher = Cipher.getInstance(ALGORITHM_RSA);
             cipher.init(Cipher.ENCRYPT_MODE, publicKey);
 
             // 执行加密操作
-            byte[] b = cipher.doFinal(source.getBytes());
-            BASE64Encoder encoder = new BASE64Encoder();
-            r = encoder.encode(b);
+            byte[] b = cipher.doFinal(src);
+            r = Base64Utils.encodeToString(b);
         } catch (Exception e) {
             e.printStackTrace();
         }
-        assert r != null;
-        return replaceSpace(r);
+        if (r == null) {
+            throw new RuntimeException("加密异常!加密内容：【" + source + "】");
+        }
+        return r;
+    }
+
+    /**
+     * 固定公钥加密
+     *
+     * @param source 待加密内容
+     * @return 加密后内容
+     * @throws Exception
+     */
+    public static String encrypt(String source) throws Exception {
+        return encrypt(getPublicKey(permPublicKey), source);
     }
 
     /**
@@ -86,22 +119,32 @@ public class RSAEncryptUtils {
      */
     public static String decrypt(Key privateKey, String content) {
         if (StringUtils.isEmpty(content)) {
-            throw new UtilException("解密内容不能为空或空字符串！");
+            throw new RuntimeException("解密内容不能为空或空字符串！");
         }
         byte[] b = null;
         try {
             // 得到Cipher对象对已用公钥加密的数据进行RSA解密
-            Cipher cipher = Cipher.getInstance(ALGORITHM);
+            Cipher cipher = Cipher.getInstance(ALGORITHM_RSA);
             cipher.init(Cipher.DECRYPT_MODE, privateKey);
-            BASE64Decoder decoder = new BASE64Decoder();
-
-            // 执行解密操作
-            b = cipher.doFinal(decoder.decodeBuffer(content));
+            b = cipher.doFinal(Base64Utils.decodeFromString(content));
         } catch (Exception e) {
             e.printStackTrace();
         }
-        assert b != null;
+        if (b == null) {
+            throw new RuntimeException("解密异常！解密内容：【" + content + "】");
+        }
         return new String(b);
+    }
+
+    /**
+     * 固定私钥解密
+     *
+     * @param content 待解密内容
+     * @return 解密后内容
+     * @throws Exception
+     */
+    public static String decrypt(String content) throws Exception {
+        return decrypt(getPrivateKey(permPrivateKey), content);
     }
 
     /**
@@ -111,7 +154,7 @@ public class RSAEncryptUtils {
      * @return String
      */
     public static String getPublicKey(KeyPair keyPair) {
-        return new BASE64Encoder().encode(keyPair.getPublic().getEncoded());
+        return Base64Utils.encodeToString(keyPair.getPublic().getEncoded());
     }
 
     /**
@@ -121,7 +164,7 @@ public class RSAEncryptUtils {
      * @return String
      */
     public static String getPrivateKey(KeyPair keyPair) {
-        return new BASE64Encoder().encode(keyPair.getPrivate().getEncoded());
+        return Base64Utils.encodeToString(keyPair.getPrivate().getEncoded());
     }
 
     /**
@@ -133,9 +176,9 @@ public class RSAEncryptUtils {
      */
     public static PublicKey getPublicKey(String publicKey) throws Exception {
         byte[] keyBytes;
-        keyBytes = (new BASE64Decoder()).decodeBuffer(publicKey);
+        keyBytes = Base64Utils.decodeFromString(publicKey);
         X509EncodedKeySpec keySpec = new X509EncodedKeySpec(keyBytes);
-        KeyFactory keyFactory = KeyFactory.getInstance("RSA");
+        KeyFactory keyFactory = KeyFactory.getInstance(ALGORITHM_RSA);
         return keyFactory.generatePublic(keySpec);
     }
 
@@ -148,9 +191,9 @@ public class RSAEncryptUtils {
      */
     public static PrivateKey getPrivateKey(String privateKey) throws Exception {
         byte[] keyBytes;
-        keyBytes = (new BASE64Decoder()).decodeBuffer(privateKey);
+        keyBytes = Base64Utils.decodeFromString(privateKey);
         PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyBytes);
-        KeyFactory keyFactory = KeyFactory.getInstance("RSA");
+        KeyFactory keyFactory = KeyFactory.getInstance(ALGORITHM_RSA);
         return keyFactory.generatePrivate(keySpec);
     }
 
@@ -165,28 +208,34 @@ public class RSAEncryptUtils {
     }
 
     public static void main(String[] args) throws Exception {
-        String password = "renre的我我我我 我我";
-        KeyPair keyPair = genKeyPair();
-        byte[] publicKeyBytes = keyPair.getPublic().getEncoded();
-        byte[] privateKeyBytes = keyPair.getPrivate().getEncoded();
-
-        String publicKeyBase64 = new BASE64Encoder().encode(publicKeyBytes);
-        String privateKeyBase64 = new BASE64Encoder().encode(privateKeyBytes);
-
-        System.out.println("publicKeyBase64.length():" + publicKeyBase64.length());
-        System.out.println("publicKeyBase64:" + publicKeyBase64);
-        System.out.println("-----------------华丽的分割线-------------------");
-        System.out.println("privateKeyBase64.length():" + privateKeyBase64.length());
-        System.out.println("privateKeyBase64:" + privateKeyBase64);
-
-        String encrypt = encrypt(keyPair.getPublic(), password);
-        String decrypt = decrypt(keyPair.getPrivate(), encrypt);
+        String password = "一只小黄鸭，游过门前小河沟111111111111111";
+//        KeyPair keyPair = genKeyPair();
+//        byte[] publicKeyBytes = keyPair.getPublic().getEncoded();
+//        byte[] privateKeyBytes = keyPair.getPrivate().getEncoded();
+//
+//        String publicKeyBase64 = new BASE64Encoder().encode(publicKeyBytes);
+//        String privateKeyBase64 = new BASE64Encoder().encode(privateKeyBytes);
+//
+//        System.out.println("publicKeyBase64.length():" + publicKeyBase64.length());
+//        System.out.println("publicKeyBase64:" + publicKeyBase64);
+//        System.out.println("-----------------华丽的分割线-------------------");
+//        System.out.println("privateKeyBase64.length():" + privateKeyBase64.length());
+//        System.out.println("privateKeyBase64:" + privateKeyBase64);
+//
+//        String encrypt = encrypt(keyPair.getPublic(), password);
+//        String decrypt = decrypt(keyPair.getPrivate(), encrypt);
+//        System.out.println("加密前：" + password);
+//        System.out.println();
+//        System.out.println("加密后：" + encrypt);
+//        System.out.println("加密后长度：" + encrypt.length());
+//        System.out.println();
+//        System.out.println("解密后：" + decrypt);
         System.out.println("加密前：" + password);
-        System.out.println();
+        System.out.println("------------------------------------------------");
+        String encrypt = encrypt(password);
         System.out.println("加密后：" + encrypt);
-        System.out.println("加密后长度：" + encrypt.length());
-        System.out.println();
-        System.out.println("解密后：" + decrypt);
+        System.out.println("------------------------------------------------");
+        System.out.println("解密后：" + decrypt(encrypt));
     }
 
 }
